--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,17 +1,17 @@
 en:
-  cancel: 'Cancel'
+  cancel: Cancel
   facebook:
     join:
       header: 'Facebook: like for continue'
     post:
       header: 'Facebook: share post for continue'
-      placeholder: 'Your comment'
-      share: 'Post to Facebook'
+      placeholder: Your comment
+      share: Post to Facebook
+  today: Today, %{time}
   vkontakte:
     join:
       header: 'Vkontakte: subscribe for continue'
     post:
       header: 'Vkontakte: share post for continue'
-      share: 'Share post'
-  today: 'Today, %{time}'
-  welcome: 'This is a free wifi hotspot. You need to sign in with a social network'
+      share: Share post
+  welcome: This is a free wifi hotspot. You need to sign in with a social network
